Fixed bts level navigation

--- a/silasethernet/bts/cast/cast.html
+++ b/silasethernet/bts/cast/cast.html
@@ -61,10 +61,10 @@
             <a href="https://www.youtube.com/user/VervegirlMagazine/playlists?view=50&sort=dd&shelf_id=25" class="dropdown-item">
               <i class="material-icons">tv</i> Watch Carmilla
             </a>
-            <a href="../carmilla/episodeguide.html" class="dropdown-item">
+            <a href="../../carmilla/episodeguide.html" class="dropdown-item">
               <i class="material-icons">book</i> Episode Guide
             </a>
-            <a href="../carmilla/characters.html" class="dropdown-item">
+            <a href="../../carmilla/characters.html" class="dropdown-item">
               <i class="material-icons">people</i> Characters
             </a>
           </div>
