--- a/silasethernet/bts/cast/natasha.html
+++ b/silasethernet/bts/cast/natasha.html
@@ -60,10 +60,10 @@
                         <a href="https://www.youtube.com/user/VervegirlMagazine/playlists?view=50&sort=dd&shelf_id=25" class="dropdown-item">
                             <i class="material-icons">tv</i> Watch Carmilla
                         </a>
-                        <a href="../carmilla/episodeguide.html" class="dropdown-item">
+                        <a href="../../carmilla/episodeguide.html" class="dropdown-item">
                             <i class="material-icons">book</i> Episode Guide
                         </a>
-                        <a href="../carmilla/characters.html" class="dropdown-item">
+                        <a href="../../carmilla/characters.html" class="dropdown-item">
                             <i class="material-icons">people</i> Characters
                         </a>
                     </div>
@@ -140,6 +140,7 @@
           <h5 class="description">Besides Carmilla, her most notable work includes the film “Almost Adults,” the film “Freelancers Anonymous,” and “CLAIREvoyant,” a webseries she co-created, wrote, produced, and starred in. She has also held guest roles on shows such as Slasher and Murdoch Mysteries.</h5>
           <h5 class="description">Natasha is heavily involved in the LGBT community and is involved with many organizations which help empower LGBTQQIA2+ youth such as “The Get REAL Movement”. Additionally she has also launched a collaboration project with Butch & Sissy for a line of Vanlis™merchandise.</h5>
 
+            <br>
           <h5 class="card-title">Fanmail Address:</h5>
           <h5 class="description">
             Phil Flagler<br>
@@ -147,16 +148,18 @@
             464 King Street East<br>
             Toronto, ON M5A 1L7<br>
           </h5>
-            <br><br>
-            <h5 class="card-title">Social Media & Other Links:</h5>
-          <a href="https://twitter.com/natvanlis" class="btn btn-just-icon btn-link btn-twitter"><i class="fa fa-twitter"></i></a>
-          <a href="https://www.instagram.com/natvanlis/" class="btn btn-just-icon btn-link btn-instagram"><i class="fa fa-instagram"></i></a>
-          <a href="https://www.facebook.com/therealnatvanlis/" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
-          <a href="https://natvanlis.tumblr.com" class="btn btn-just-icon btn-link btn-tumblr"><i class="fa fa-tumblr"></i></a>
-          <a href="https://www.pinterest.com/natvanlis/" class="btn btn-just-icon btn-link btn-pinterest"><i class="fa fa-pinterest"></i></a>
-          <a href="https://www.natashanegovanlis.com" class="btn btn-just-icon btn-link btn-external-link"><i class="fa fa-external-link"></i></a>
-          <a href="https://www.butchandsissy.co/product-category/brands/vanlis/" class="btn btn-just-icon btn-link btn-shopping-bag"><i class="fa fa-shopping-bag"></i></a>
-          <a href="https://natvanlis.bandcamp.com/" class="btn btn-just-icon btn-link btn-music"><i class="fa fa-music"></i></a>
+            <br>
+            <h5 class="card-title">Social Media:</h5>
+          <a href="https://twitter.com/natvanlis" class="btn btn-just-icon btn-link btn-twitter" target="_blank"><i class="fa fa-twitter"></i></a>
+          <a href="https://www.instagram.com/natvanlis/" class="btn btn-just-icon btn-link btn-instagram" target="_blank"><i class="fa fa-instagram"></i></a>
+          <a href="https://www.facebook.com/therealnatvanlis/" class="btn btn-just-icon btn-link btn-facebook" target="_blank"><i class="fa fa-facebook"></i></a>
+          <a href="https://natvanlis.tumblr.com" class="btn btn-just-icon btn-link btn-tumblr" target="_blank"><i class="fa fa-tumblr"></i></a>
+          <a href="https://www.pinterest.com/natvanlis/" class="btn btn-just-icon btn-link btn-pinterest" target="_blank"><i class="fa fa-pinterest"></i></a><br>
+
+            <h5 class="card-title">Other Links:</h5>
+          <a href="https://www.natashanegovanlis.com" target="_blank">NatashaNegovanlis.com</a><br>
+          <a href="https://www.butchandsissy.co/product-category/brands/vanlis/" target="_blank">Vanlis Merchandise</a><br>
+          <a href="https://natvanlis.bandcamp.com/" target="_blank">Nat Vanlis on Bandcamp</a>
         <p><br><br></p>
         </div>
       </div>
