Fixed carmilla level navigation

--- a/silasethernet/carmilla/episodeguide.html
+++ b/silasethernet/carmilla/episodeguide.html
@@ -61,10 +61,10 @@
             <a href="https://www.youtube.com/user/VervegirlMagazine/playlists?view=50&sort=dd&shelf_id=25" class="dropdown-item">
               <i class="material-icons">tv</i> Watch Carmilla
             </a>
-            <a href="./carmilla/episodeguide.html" class="dropdown-item">
+            <a href="episodeguide.html" class="dropdown-item">
               <i class="material-icons">book</i> Episode Guide
             </a>
-            <a href="./carmilla/characters.html" class="dropdown-item">
+            <a href="characters.html" class="dropdown-item">
               <i class="material-icons">people</i> Characters
             </a>
           </div>
@@ -75,11 +75,11 @@
           </a>
           <div class="dropdown-menu dropdown-with-icons">
             <div class="btn-group dropright">
-              <a href="./bts/cast/cast.html" class="dropdown-item">
+              <a href="../bts/cast/cast.html" class="dropdown-item">
                 <i class="material-icons">tv</i> Cast
               </a>
             </div>
-            <a href="./bts/crew/crew.html" class="dropdown-item">
+            <a href="../bts/crew/crew.html" class="dropdown-item">
               <i class="material-icons">book</i> Crew
             </a>
             <a href="https://www.youtube.com/user/VervegirlMagazine" class="dropdown-item">
