Added about page and text to index

--- a/silasethernet/about.html
+++ b/silasethernet/about.html
@@ -18,8 +18,8 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
-  <link rel="icon" type="image/png" href="assets/img/favicon.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/apple-icon.png">
+  <link rel="icon" type="image/png" href="./assets/img/favicon.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <title>
     Silas Ethernet by Silas Board
@@ -29,9 +29,10 @@
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
   <!-- CSS Files -->
-  <link href="assets/css/material-kit.css?v=2.0.6" rel="stylesheet" />
+  <link href="./assets/css/material-kit.css?v=2.0.6" rel="stylesheet" />
   <!-- CSS Just for demo purpose, don't include it in your project -->
-  <link href="assets/demo/demo.css" rel="stylesheet" />
+  <link href="./assets/demo/demo.css" rel="stylesheet" />
+  <script src="https://kit.fontawesome.com/3ba22e2157.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="landing-page sidebar-collapse">
@@ -117,24 +118,18 @@
     </div>
   </div>
 </nav>
-  <div class="page-header header-filter" data-parallax="true" style="background-image: url('assets/img/altcarmilla.png')">
+  <div class="page-header header-filter" data-parallax="true" style="background-image: url('./assets/img/mdrncast.jpg')">
     <div class="container">
       <div class="row">
         <div class="col-md-8 ml-auto mr-auto">
+<br>
           <br>
           <br>
           <br>
           <br>
           <br>
           <br>
-          <br>
-          <h1 class="title">Silas Ethernet</h1>
-          <h4>Your number one source for all things Carmilla, the web series.</h4>
-          <h4>New to Carmilla? Start here...</h4>
-          <br>
-          <a href="https://www.youtube.com/user/VervegirlMagazine/playlists?view=50&sort=dd&shelf_id=25" target="_blank" class="btn btn-danger btn-raised btn-lg">
-            <i class="fa fa-play"></i> Watch Carmilla
-          </a>
+          <h1 class="title">About Carmilla</h1>
         </div>
       </div>
     </div>
@@ -144,28 +139,23 @@
       <div class="section text-center">
         <div class="row">
           <div class="col-md-8 ml-auto mr-auto">
-            <h2 class="title">Welcome to Silas University Ethernet!</h2>
+            <div class="section text-center">
+              <h2 class="title">The Little Web Series That Could</h2>
 
-            <img src="assets/img/laurase.png" alt="Laura Silas Ethernet">
-
-            <h5 class="description">Everything and anything Carmilla you'll find here (eventually). Our purpose to be a living archive of Carmilla, the web series. Because Carmilla was run as a transmedia campaign, it's important for us to give fans the experience of being involved in the Creampuff community as it happened back in the day and currently. Today, even without new content for 2 years, there are still new fans joining the fandom everyday. This is for the OG and new Creampuffs out there. </h5>
-
-            <h4 class="info-title">Social Media</h4>
-
-            <a href="https://twitter.com/silasethernet" class="btn btn-just-icon btn-link btn-twitter" target="_blank"><i class="fa fa-twitter"></i></a>
-            <a href="https://silasethernet.tumblr.com/" class="btn btn-just-icon btn-link btn-tumblr" target="_blank"><i class="fa fa-tumblr"></i></a>
-            <br>
-            <br>
-            <h3 class="info-title">Looking for current community content?</h3>
-
-            <a href="http://www.carmillafans.com/" target="_blank"><img src="assets/img/carmfans.png" alt="Carmilla Fans"></a><br>
-
-            <h3 class="info-title">Help us get #MoreCarmilla</h3>
-
-            <a href="morecarmilla.html"><img src="assets/img/moreiconfull.gif" class="img-raised rounded img-fluid" align="center" hspace="20"></a>
-
+              <h5 class="description">Carmilla is a web series co-created by Jordan Hall, Steph Ouaknine, and Jay Bennet, loosely based on the novella written by Sheridan Le Fanu in 1872. The series premiered on the YouTube channel Vervegirl (since rebranded as KindaTV as of January 2016) on August 19, 2014. The series was sponsored by U by Kotex and were additionally the executive producer of the web series. The web series was produced by Smokebomb Entertainment, which is the digital media division of Shaftesbury.</h5>
+              <h5 class="description">The series is set in Styria, Austria at the fictional Silas University. The story is centered around Laura Hollis (Elise Bauman) and Carmilla Karnstein (Natasha Negovanlis) and is told from the perspective of Laura’s vlogs. Season one starts with Laura as she begins to investigate the strange disappearance of Silas students, including that of her own roommate, until she is assigned Carmilla as her new roommate. The season then follows Laura's investigation along with her relationship with Carmilla, which begins with hostility, but slowly turns romantic over the course of Season One.</h5>
+              <h5 class="description">The series contains 4 seasons in total, including a “Season Zero” which is a twelve-episode prequel. Each season contains 36 episodes ranging from three to seven minutes in length. It was then announced in 2016 that there would be a feature film made of the series that would be set five years after the end of season three. The film, The Carmilla Movie, received half of its funding from its fans (“Creampuffs”) and was released on October 26, 2017. A primetime series has been in development by Shaftesbury TV since the middle of 2018. An adaptation of Season 1 was written by Kim Turrisi as a young adult novel, released May 7, 2019.</h5>
+              <h5 class="description">There are numerous pieces of additional content that were released in conjunction with Seasons 0-3.  Post Season one there was a  Christmas special filmed and released detailing the group’s travels after the conclusion of the season, along with the creation of canon twitter accounts under Laura, Carmilla, and Lafontaine’s names which are used in conjunction with the release of various episodes throughout the series. During Season three, thirteen podcasts created by Mel were released detailing the daily life and various events that happen while Silas students are trapped in the pit.</h5>
+              <h5 class="description">The web series has generated over 91 million views on Youtube and has been viewed in over 193 countries around the world. In 2015, the series was nominated for both a Streamy and Shorty Award for best drama and favorite webshow respectively. In 2016, the series won a Canadian Screen Award for Digital Media Program/Series - Fiction and a Rockie Award for Branded Content at the Banff World Media Festival. In 2018, the series once again won an award for Branded Content of the Year at the MIPTV Media Market.</h5>
+              <h4 class="info-title">Social Media Links:</h4>
+                Tumblr: https://carmillaseries.tumblr.com
+                Twitter: https://twitter.com/carmillaseries
+                IG: https://www.instagram.com/carmillaseries/?hl=en
+                FB: https://www.facebook.com/CarmillaSeries/?fref=ts</h5>
+            </div>
           </div>
         </div>
+      </div>
       </div>
     </div>
   </div>
@@ -205,18 +195,18 @@
     </div>
   </footer>
   <!--   Core JS Files   -->
-  <script src="assets/js/core/jquery.min.js" type="text/javascript"></script>
-  <script src="assets/js/core/popper.min.js" type="text/javascript"></script>
-  <script src="assets/js/core/bootstrap-material-design.min.js" type="text/javascript"></script>
-  <script src="assets/js/plugins/moment.min.js"></script>
+  <script src="./assets/js/core/jquery.min.js" type="text/javascript"></script>
+  <script src="./assets/js/core/popper.min.js" type="text/javascript"></script>
+  <script src="./assets/js/core/bootstrap-material-design.min.js" type="text/javascript"></script>
+  <script src="./assets/js/plugins/moment.min.js"></script>
   <!--	Plugin for the Datepicker, full documentation here: https://github.com/Eonasdan/bootstrap-datetimepicker -->
-  <script src="assets/js/plugins/bootstrap-datetimepicker.js" type="text/javascript"></script>
+  <script src="./assets/js/plugins/bootstrap-datetimepicker.js" type="text/javascript"></script>
   <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-  <script src="assets/js/plugins/nouislider.min.js" type="text/javascript"></script>
+  <script src="./assets/js/plugins/nouislider.min.js" type="text/javascript"></script>
   <!--  Google Maps Plugin    -->
   <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
   <!-- Control Center for Material Kit: parallax effects, scripts for the example pages etc -->
-  <script src="assets/js/material-kit.js?v=2.0.6" type="text/javascript"></script>
+  <script src="./assets/js/material-kit.js?v=2.0.6" type="text/javascript"></script>
 </body>
 
 </html>
