--- a/silasethernet/about.html
+++ b/silasethernet/about.html
@@ -148,10 +148,11 @@
               <h5 class="description">There are numerous pieces of additional content that were released in conjunction with Seasons 0-3.  Post Season one there was a  Christmas special filmed and released detailing the group’s travels after the conclusion of the season, along with the creation of canon twitter accounts under Laura, Carmilla, and Lafontaine’s names which are used in conjunction with the release of various episodes throughout the series. During Season three, thirteen podcasts created by Mel were released detailing the daily life and various events that happen while Silas students are trapped in the pit.</h5>
               <h5 class="description">The web series has generated over 91 million views on Youtube and has been viewed in over 193 countries around the world. In 2015, the series was nominated for both a Streamy and Shorty Award for best drama and favorite webshow respectively. In 2016, the series won a Canadian Screen Award for Digital Media Program/Series - Fiction and a Rockie Award for Branded Content at the Banff World Media Festival. In 2018, the series once again won an award for Branded Content of the Year at the MIPTV Media Market.</h5>
               <h4 class="info-title">Social Media Links:</h4>
-                Tumblr: https://carmillaseries.tumblr.com
-                Twitter: https://twitter.com/carmillaseries
-                IG: https://www.instagram.com/carmillaseries/?hl=en
-                FB: https://www.facebook.com/CarmillaSeries/?fref=ts</h5>
+
+              <a href="https://twitter.com/carmillaseries" class="btn btn-just-icon btn-link btn-twitter" target="_blank"><i class="fa fa-twitter"></i></a>
+              <a href="https://www.instagram.com/carmillaseries/?hl=en" class="btn btn-just-icon btn-link btn-instagram" target="_blank"><i class="fa fa-instagram"></i></a>
+              <a href="https://www.facebook.com/CarmillaSeries/?fref=ts" class="btn btn-just-icon btn-link btn-facebook" target="_blank"><i class="fa fa-facebook"></i></a>
+              <a href="https://carmillaseries.tumblr.com" class="btn btn-just-icon btn-link btn-tumblr" target="_blank"><i class="fa fa-tumblr"></i></a>
             </div>
           </div>
         </div>
