Fixed all links, about page, and homepage

--- a/silasethernet/about.html
+++ b/silasethernet/about.html
@@ -92,9 +92,9 @@
             Fandom
           </a>
           <div class="dropdown-menu dropdown-with-icons">
-            <!--<a href="comingsoon.html" class="dropdown-item">-->
-            <!--<i class="material-icons">book</i> Fan Fiction-->
-            <!--</a>-->
+            <a href="morecarmilla.html" class="dropdown-item">
+              <i class="material-icons">queue</i> MoreCarmilla
+            </a>
             <!--<a href="comingsoon.html" class="dropdown-item">-->
             <!--<i class="material-icons">people</i> Fan Art-->
             <!--</a>-->
@@ -109,11 +109,6 @@
         <!--<li class="nav-item">-->
         <!--<i class="material-icons">cloud_download</i> Download-->
         <!--</li>-->
-        <li class="nav-item">
-          <a href="morecarmilla.html" class="navbar-brand">
-            #MoreCarmilla
-          </a>
-        </li>
       </ul>
     </div>
   </div>
