--- a/silasethernet/bts/cast/natasha.html
+++ b/silasethernet/bts/cast/natasha.html
@@ -97,6 +97,9 @@
                         <!--<a href="comingsoon.html" class="dropdown-item">-->
                         <!--<i class="material-icons">people</i> Fan Art-->
                         <!--</a>-->
+                        <a href="../../morecarmilla.html" class="dropdown-item">
+                            <i class="material-icons">queue</i> MoreCarmilla
+                        </a>
                         <a href="../../directory.html" class="dropdown-item">
                             <i class="material-icons">people</i> Fandom Directory
                         </a>
@@ -108,16 +111,11 @@
                 <!--<li class="nav-item">-->
                 <!--<i class="material-icons">cloud_download</i> Download-->
                 <!--</li>-->
-                <li class="nav-item">
-                    <a href="../../morecarmilla.html" class="navbar-brand">
-                        #MoreCarmilla
-                    </a>
-                </li>
             </ul>
         </div>
     </div>
 </nav>
-  <div class="page-header header-filter" data-parallax="true" style="background-image: url('../../assets/img/allcast2.jpg');"></div>
+  <div class="page-header header-filter" data-parallax="true" style="background-image: url('../../assets/img/hcast.jpg');"></div>
   <div class="main main-raised">
     <div class="profile-content">
       <div class="container">
