--- a/silasethernet/carmilla/episodeguide.html
+++ b/silasethernet/carmilla/episodeguide.html
@@ -98,6 +98,9 @@
             <!--<a href="comingsoon.html" class="dropdown-item">-->
             <!--<i class="material-icons">people</i> Fan Art-->
             <!--</a>-->
+            <a href="../morecarmilla.html" class="dropdown-item">
+              <i class="material-icons">queue</i> MoreCarmilla
+            </a>
             <a href="../directory.html" class="dropdown-item">
               <i class="material-icons">people</i> Fandom Directory
             </a>
@@ -109,11 +112,6 @@
         <!--<li class="nav-item">-->
         <!--<i class="material-icons">cloud_download</i> Download-->
         <!--</li>-->
-        <li class="nav-item">
-          <a href="../morecarmilla.html" class="navbar-brand"">
-            #MoreCarmilla
-          </a>
-        </li>
       </ul>
     </div>
   </div>
