--- a/silasethernet/index.html
+++ b/silasethernet/index.html
@@ -91,9 +91,9 @@
             Fandom
           </a>
           <div class="dropdown-menu dropdown-with-icons">
-            <!--<a href="comingsoon.html" class="dropdown-item">-->
-            <!--<i class="material-icons">book</i> Fan Fiction-->
-            <!--</a>-->
+            <a href="morecarmilla.html" class="dropdown-item">
+              <i class="material-icons">queue</i> MoreCarmilla
+            </a>
             <!--<a href="comingsoon.html" class="dropdown-item">-->
             <!--<i class="material-icons">people</i> Fan Art-->
             <!--</a>-->
@@ -108,11 +108,6 @@
         <!--<li class="nav-item">-->
         <!--<i class="material-icons">cloud_download</i> Download-->
         <!--</li>-->
-        <li class="nav-item">
-          <a href="morecarmilla.html" class="navbar-brand">
-            #MoreCarmilla
-          </a>
-        </li>
       </ul>
     </div>
   </div>
@@ -146,7 +141,7 @@
           <div class="col-md-8 ml-auto mr-auto">
             <h2 class="title">Welcome to Silas University Ethernet!</h2>
 
-            <img src="assets/img/laurase.png" alt="Laura Silas Ethernet">
+            <img src="assets/img/laurase.png" class="img-fluid" align="center" hspace="20" alt="Laura Silas Ethernet">
 
             <h5 class="description">Everything and anything Carmilla you'll find here (eventually). Our purpose to be a living archive of Carmilla, the web series. Because Carmilla was run as a transmedia campaign, it's important for us to give fans the experience of being involved in the Creampuff community as it happened back in the day and currently. Today, even without new content for 2 years, there are still new fans joining the fandom everyday. This is for the OG and new Creampuffs out there. </h5>
 
