--- a/silasethernet/comingsoon.html
+++ b/silasethernet/comingsoon.html
@@ -18,8 +18,8 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/apple-icon.png">
-  <link rel="icon" type="image/png" href="./assets/img/favicon.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="http://silasethernet.com/assets/img/apple-icon.png">
+  <link rel="icon" type="image/png" href="http://silasethernet.com/assets/img/favicon.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <title>
     Silas Ethernet by Silas Board
@@ -29,9 +29,9 @@
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
   <!-- CSS Files -->
-  <link href="./assets/css/material-kit.css?v=2.0.6" rel="stylesheet" />
+  <link href="http://silasethernet.com/assets/css/material-kit.css?v=2.0.6" rel="stylesheet" />
   <!-- CSS Just for demo purpose, don't include it in your project -->
-  <link href="./assets/demo/demo.css" rel="stylesheet" />
+  <link href="http://silasethernet.com/assets/demo/demo.css" rel="stylesheet" />
   <script src="https://kit.fontawesome.com/3ba22e2157.js" crossorigin="anonymous"></script>
 </head>
 
@@ -92,9 +92,9 @@
             Fandom
           </a>
           <div class="dropdown-menu dropdown-with-icons">
-            <!--<a href="comingsoon.html" class="dropdown-item">-->
-            <!--<i class="material-icons">book</i> Fan Fiction-->
-            <!--</a>-->
+            <a href="morecarmilla.html" class="dropdown-item">
+              <i class="material-icons">queue</i> MoreCarmilla
+            </a>
             <!--<a href="comingsoon.html" class="dropdown-item">-->
             <!--<i class="material-icons">people</i> Fan Art-->
             <!--</a>-->
@@ -109,16 +109,11 @@
         <!--<li class="nav-item">-->
         <!--<i class="material-icons">cloud_download</i> Download-->
         <!--</li>-->
-        <li class="nav-item">
-          <a href="morecarmilla.html" class="navbar-brand">
-            #MoreCarmilla
-          </a>
-        </li>
       </ul>
     </div>
   </div>
 </nav>
-  <div class="page-header header-filter" data-parallax="true" style="background-image: url('./assets/img/university.jpg')">
+  <div class="page-header header-filter" data-parallax="true" style="background-image: url('http://silasethernet.com/assets/img/university.jpg')">
     <div class="container">
       <div class="row">
         <div class="col-md-8 ml-auto mr-auto">
@@ -135,7 +130,7 @@
         <div class="row">
           <div class="col-md-8 ml-auto mr-auto">
             <h4 class="info-title">The Silas University Library couldn't find this page... Check back again later... </h4>
-            <img src="./assets/img/techdiff2.jpg" height="450" width="800"/></div>
+            <img src="http://silasethernet.com/assets/img/techdiff2.jpg" height="450" width="800"/></div>
         </div>
       </div>
       </div>
@@ -177,18 +172,18 @@
     </div>
   </footer>
   <!--   Core JS Files   -->
-  <script src="./assets/js/core/jquery.min.js" type="text/javascript"></script>
-  <script src="./assets/js/core/popper.min.js" type="text/javascript"></script>
-  <script src="./assets/js/core/bootstrap-material-design.min.js" type="text/javascript"></script>
-  <script src="./assets/js/plugins/moment.min.js"></script>
+  <script src="http://silasethernet.com/assets/js/core/jquery.min.js" type="text/javascript"></script>
+  <script src="http://silasethernet.com/assets/js/core/popper.min.js" type="text/javascript"></script>
+  <script src="http://silasethernet.com/assets/js/core/bootstrap-material-design.min.js" type="text/javascript"></script>
+  <script src="http://silasethernet.com/assets/js/plugins/moment.min.js"></script>
   <!--	Plugin for the Datepicker, full documentation here: https://github.com/Eonasdan/bootstrap-datetimepicker -->
-  <script src="./assets/js/plugins/bootstrap-datetimepicker.js" type="text/javascript"></script>
+  <script src="http://silasethernet.com/assets/js/plugins/bootstrap-datetimepicker.js" type="text/javascript"></script>
   <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-  <script src="./assets/js/plugins/nouislider.min.js" type="text/javascript"></script>
+  <script src="http://silasethernet.com/assets/js/plugins/nouislider.min.js" type="text/javascript"></script>
   <!--  Google Maps Plugin    -->
   <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
   <!-- Control Center for Material Kit: parallax effects, scripts for the example pages etc -->
-  <script src="./assets/js/material-kit.js?v=2.0.6" type="text/javascript"></script>
+  <script src="http://silasethernet.com/assets/js/material-kit.js?v=2.0.6" type="text/javascript"></script>
 </body>
 
 </html>
