fixed social media icons

--- a/silasethernet/about.html
+++ b/silasethernet/about.html
@@ -18,8 +18,8 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/apple-icon.png">
-  <link rel="icon" type="image/png" href="./assets/img/favicon.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="../../assets/img/apple-icon.png">
+  <link rel="icon" type="image/png" href="../../assets/img/favicon.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <title>
     Silas Ethernet by Silas Board
@@ -32,7 +32,6 @@
   <link href="./assets/css/material-kit.css?v=2.0.6" rel="stylesheet" />
   <!-- CSS Just for demo purpose, don't include it in your project -->
   <link href="./assets/demo/demo.css" rel="stylesheet" />
-  <script src="https://kit.fontawesome.com/3ba22e2157.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="landing-page sidebar-collapse">
