Added thumbnails for cast page

--- a/silasethernet/bts/cast/cast.html
+++ b/silasethernet/bts/cast/cast.html
@@ -132,36 +132,134 @@
       <div class="section text-center">
         <div class="row">
           <div class="col-md-8 ml-auto mr-auto">
-
-            <h2 class="title">Carmilla Cast</h2>
-            <p><a href="natasha.html" class="info-title">
-              Natasha Negovanlis
-            </a></p>
-            <p><a href="elise.html" class="info-title">
-              Elise Bauman
-            </a></p>
-            <p><a href="annie.html" class="info-title">
-              Annie Briggs
-            </a></p>
-            <p><a href="kaitlyn.html" class="info-title">
-              Kaitlyn Alexander
-            </a></p>
-            <p><a href="sharon.html" class="info-title">
-              Sharon Belle
-            </a></p>
-            <p><a href="matt.html" class="info-title">
-              Matt O'Connor
-            </a></p>
-            <p><a href="aaron.html" class="info-title">
-              Aaron Chartrand
-            </a></p>
-            <p><a href="nicole.html" class="info-title">
-              Nicole Stamp
-            </a></p>
-            <p><a href="sophia.html" class="info-title">
-              Sophia Walker
-            </a></p>
-
+            <div class="section text-center">
+              <h2 class="title">Carmilla Cast</h2>
+              <div class="team">
+                <div class="row">
+                  <div class="col-md-4">
+                    <div class="team-player">
+                      <div class="card card-plain">
+                        <div class="col-md-8 ml-auto mr-auto">
+                          <a href="natasha.html" class="info-title">
+                            <img src="../../assets/img/faces/natasha.jpg" alt="Thumbnail Image" class="img-raised rounded img-fluid">
+                            <h4 class="card-title">Natasha Negovanlis</h4>
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="team-player">
+                      <div class="card card-plain">
+                        <div class="col-md-8 ml-auto mr-auto">
+                          <a href="elise.html" class="info-title">
+                            <img src="../../assets/img/faces/elise.jpg" alt="Thumbnail Image" class="img-raised rounded img-fluid">
+                          </a>
+                        </div>
+                        <h4 class="card-title">Elise Bauman
+                        </h4></a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="team-player">
+                      <div class="card card-plain">
+                        <div class="col-md-8 ml-auto mr-auto">
+                          <a href="annie.html" class="info-title">
+                            <img src="../../assets/img/faces/annie.jpg" alt="Thumbnail Image" class="img-raised rounded img-fluid">
+                            <h4 class="card-title">Annie Briggs</h4>
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="team-player">
+                      <div class="card card-plain">
+                        <div class="col-md-8 ml-auto mr-auto">
+                          <a href="kaitlyn.html" class="info-title">
+                            <img src="../../assets/img/faces/kaitlyn.jpg" alt="Thumbnail Image" class="img-raised rounded img-fluid">
+                            <h4 class="card-title">Kaitlyn Alexander</h4>
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="team-player">
+                      <div class="card card-plain">
+                        <div class="col-md-8 ml-auto mr-auto">
+                          <a href="sharon.html" class="info-title">
+                            <img src="../../assets/img/faces/sharon.jpg" alt="Thumbnail Image" class="img-raised rounded img-fluid">
+                            <h4 class="card-title">Sharon Belle</h4>
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="team-player">
+                      <div class="card card-plain">
+                        <div class="col-md-8 ml-auto mr-auto">
+                          <a href="matt.html" class="info-title">
+                            <img src="../../assets/img/faces/matt.jpg" alt="Thumbnail Image" class="img-raised rounded img-fluid">
+                            <h4 class="card-title">Matt O'Connor</h4>
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="team-player">
+                      <div class="card card-plain">
+                        <div class="col-md-8 ml-auto mr-auto">
+                          <a href="aaron.html" class="info-title">
+                            <img src="../../assets/img/faces/aaron.jpg" alt="Thumbnail Image" class="img-raised rounded img-fluid">
+                            <h4 class="card-title">Aaron Chartrand</h4>
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="team-player">
+                      <div class="card card-plain">
+                        <div class="col-md-8 ml-auto mr-auto">
+                          <a href="sophia.html" class="info-title">
+                            <img src="../../assets/img/faces/sophia.jpg" alt="Thumbnail Image" class="img-raised rounded img-fluid">
+                            <h4 class="card-title">Sophia Walker</h4>
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                  <div class="team-player">
+                    <div class="card card-plain">
+                      <div class="col-md-8 ml-auto mr-auto">
+                        <a href="nicole.html" class="info-title">
+                          <img src="../../assets/img/faces/nicole.jpg" alt="Thumbnail Image" class="img-raised rounded img-fluid">
+                          <h4 class="card-title">Nicole Stamp</h4>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                  <div class="col-md-4">
+                    <div class="team-player">
+                      <div class="card card-plain">
+                        <div class="col-md-8 ml-auto mr-auto">
+                          <a href="shannon.html" class="info-title">
+                            <img src="../../assets/img/faces/shannon.jpg" alt="Thumbnail Image" class="img-raised rounded img-fluid">
+                            <h4 class="card-title">Shannon Kook</h4>
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
