Updated crew page with thumbnails

--- a/silasethernet/bts/crew/crew.html
+++ b/silasethernet/bts/crew/crew.html
@@ -132,27 +132,70 @@
       <div class="section text-center">
         <div class="row">
           <div class="col-md-8 ml-auto mr-auto">
-
-            <h2 class="title">Crew</h2>
-            <p><a href="steph.html" class="info-title">
-              Steph
-            </a></p>
-            <p><a href="jordan.html" class="info-title">
-              Jordan Hall
-            </a></p>
-            <p><a href="spencer.html" class="info-title">
-              Spencer Maybee
-            </a></p>
-            <p><a href="ellen.html" class="info-title">
-              Ellen Simpson
-            </a></p>
-            <p><a href="mamamel.html" class="info-title">
-              Mel W
-            </a></p>
-            <p><a href="paige.html" class="info-title">
-              Paige Haight
-            </a></p>
-
+            <div class="section text-center">
+              <h2 class="title">Carmilla Creators & Crew</h2>
+              <div class="team">
+                <div class="row">
+                  <div class="col-md-4">
+                    <div class="team-player">
+                      <div class="card card-plain">
+                        <div class="col-md-8 ml-auto mr-auto">
+                          <a href="steph.html" class="info-title">
+                            <img src="../../assets/img/faces/steph.jpg" alt="Thumbnail Image" class="img-raised rounded img-fluid">
+                            <h4 class="card-title">Steph Ouaknine</h4>
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="team-player">
+                      <div class="card card-plain">
+                        <div class="col-md-8 ml-auto mr-auto">
+                          <a href="spencer.html" class="info-title">
+                            <img src="../../assets/img/faces/spencer.jpg.jpg" alt="Thumbnail Image" class="img-raised rounded img-fluid">
+                        <h4 class="card-title">Spencer Maybee</h4>
+                        </a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="team-player">
+                      <div class="card card-plain">
+                        <div class="col-md-8 ml-auto mr-auto">
+                          <a href="ellen.html" class="info-title">
+                            <img src="../../assets/img/faces/ellen.jpg" alt="Thumbnail Image" class="img-raised rounded img-fluid">
+                            <h4 class="card-title">Ellen Simpson</h4>
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="team-player">
+                      <div class="card card-plain">
+                        <div class="col-md-8 ml-auto mr-auto">
+                          <a href="melw.html" class="info-title">
+                            <img src="../../assets/img/faces/melw.jpg" alt="Thumbnail Image" class="img-raised rounded img-fluid">
+                            <h4 class="card-title">Melanie Windle</h4>
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="team-player">
+                      <div class="card card-plain">
+                        <div class="col-md-8 ml-auto mr-auto">
+                          <a href="paige.html" class="info-title">
+                            <img src="../../assets/img/faces/paige.jpg" alt="Thumbnail Image" class="img-raised rounded img-fluid">
+                            <h4 class="card-title">Paige Haight</h4>
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
           </div>
         </div>
       </div>
