updated crew page and coming soon

--- a/silasethernet/bts/crew/crew.html
+++ b/silasethernet/bts/crew/crew.html
@@ -152,6 +152,18 @@
                     <div class="team-player">
                       <div class="card card-plain">
                         <div class="col-md-8 ml-auto mr-auto">
+                          <a href="jordan.html" class="info-title">
+                            <img src="../../assets/img/faces/jordan.jpg" alt="Thumbnail Image" class="img-raised rounded img-fluid">
+                            <h4 class="card-title">Jordan Hall</h4>
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="team-player">
+                      <div class="card card-plain">
+                        <div class="col-md-8 ml-auto mr-auto">
                           <a href="spencer.html" class="info-title">
                             <img src="../../assets/img/faces/spencer.jpg" alt="Thumbnail Image" class="img-raised rounded img-fluid">
                         <h4 class="card-title">Spencer Maybee</h4>
