--- a/silasethernet/comingsoon.html
+++ b/silasethernet/comingsoon.html
@@ -39,7 +39,7 @@
 <nav class="navbar navbar-color-on-scroll fixed-top navbar-expand-lg bg-dark" color-on-scroll="100" id="sectionsNav">
   <div class="container">
     <div class="navbar-translate">
-      <a class="navbar-brand" href="index.html">
+      <a class="navbar-brand" href="http://silasethernet.com/index.html">
         Silas Ethernet </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="sr-only">Toggle navigation</span>
@@ -113,7 +113,7 @@
     </div>
   </div>
 </nav>
-  <div class="page-header header-filter" data-parallax="true" style="background-image: url('http://silasethernet.com/assets/img/university.jpg')">
+  <div class="page-header header-filter" data-parallax="true" style="background-image: url('http://silasethernet.com/assets/img/yeahoops.png')">
     <div class="container">
       <div class="row">
         <div class="col-md-8 ml-auto mr-auto">
